# scarfbench-cli

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  astro.config.mjs  cargow  cargow.bat  dist-workspace.toml  pyproject.toml  rustfmt.toml  rustupw  rustupw.bat
.astro/: content-modules.mjs  data-store.json  settings.json
.cargo/: .global-cache  env  env.fish
.cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: clap-4.5.58.crate  clap_builder-4.5.58.crate  comfy-table-7.2.2.crate  deranged-0.5.6.crate  jiff-0.2.20.crate  onig-6.5.1.crate  onig_sys-69.9.1.crate  syn-2.0.116.crate  syntect-5.3.0.crate
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/jiff-0.2.20/: .cargo_vcs_info.json  Cargo.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: gh-pages.yml  publish-crates.yml  release.yml  release_config.json  rust.yml
agents/: run_copilot.sh  run_cursor.sh  run_gemini.sh  sweep_and_run.py
agents/images/cursor/: Dockerfile  devcontainer.json
docs/: AGENT_HARNESS.md  DEVELOPER.md
src/: cli.rs  main.rs  ui.rs
src/bench/: list.rs  mod.rs  pull.rs  test.rs
src/commands/: init.rs  mod.rs  run.rs  test.rs
src/eval/: driver.rs  mod.rs  prepare.rs  run.rs  types.rs
src/utils/: mod.rs  progress_bar.rs
src/validate/: mod.rs  types.rs
test_data/sample_app/: main.java  test_prompt.txt
tests/: scarf_bench_cmd.rs  scarf_eval_cmd.rs
tests/fixtures/benchmark/business_domain/cart/jakarta/: Makefile  smoke.py
tests/fixtures/benchmark/business_domain/cart/spring/: Makefile
tests/fixtures/benchmark/business_domain/converter/jakarta/: Makefile  smoke.py
tests/fixtures/benchmark/business_domain/converter/spring/: Makefile  smoke.py
tests/fixtures/benchmark/business_domain/counter/jakarta/: Makefile  smoke.py
tests/fixtures/benchmark/business_domain/counter/quarkus/: Makefile
tests/fixtures/benchmark/business_domain/counter/spring/: Makefile  smoke.py
tests/fixtures/benchmark/business_domain/helloservice/jakarta/: Makefile  smoke.py
tests/fixtures/benchmark/business_domain/helloservice/spring/: Makefile
tests/fixtures/benchmark/business_domain/standalone/jakarta/: Makefile  smoke.py
tests/fixtures/benchmark/business_domain/standalone/spring/: Makefile  smoke.py
tests/fixtures/benchmark/dependency_injection/billpayment/jakarta/: Makefile  smoke.py
tests/fixtures/benchmark/dependency_injection/billpayment/quarkus/: Makefile  smoke.py
tests/fixtures/benchmark/dependency_injection/billpayment/spring/: Makefile  smoke.py
tests/fixtures/benchmark/dependency_injection/decorators/jakarta/: Makefile  smoke.py
tests/fixtures/benchmark/dependency_injection/decorators/quarkus/: Makefile  smoke.py
tests/fixtures/benchmark/dependency_injection/decorators/spring/: Makefile  smoke.py
tests/fixtures/benchmark/dependency_injection/encoder/jakarta/: Makefile  smoke.py
tests/fixtures/benchmark/dependency_injection/encoder/quarkus/: Makefile  smoke.py
tests/fixtures/benchmark/dependency_injection/encoder/spring/: Makefile  smoke.py
tests/fixtures/benchmark/dependency_injection/guessnumber/jakarta/: Makefile  smoke.py
tests/fixtures/benchmark/dependency_injection/guessnumber/quarkus/: Makefile  smoke.py
tests/fixtures/benchmark/dependency_injection/guessnumber/spring/: Makefile  smoke.py
tests/fixtures/test_agent/: agent.toml  run.sh
tests/fixtures/validations/codex__business_domain__cart__spring__quarkus/run_1/: metadata.json
tests/fixtures/validations/codex__business_domain__cart__spring__quarkus/run_2/: metadata.json
tests/fixtures/validations/codex__business_domain__cart__spring__quarkus/run_3/: metadata.json
tests/fixtures/validations/codex__business_domain__converter__spring__quarkus/run_1/: metadata.json
tests/fixtures/validations/codex__business_domain__converter__spring__quarkus/run_2/: metadata.json
tests/fixtures/validations/codex__business_domain__converter__spring__quarkus/run_3/: metadata.json
tests/fixtures/validations/codex__business_domain__counter__spring__quarkus/run_1/: metadata.json
tests/fixtures/validations/codex__business_domain__counter__spring__quarkus/run_2/: metadata.json
tests/fixtures/validations/codex__business_domain__counter__spring__quarkus/run_3/: metadata.json
tests/fixtures/validations/codex__business_domain__helloservice__spring__quarkus/run_1/: metadata.json
tests/fixtures/validations/codex__business_domain__helloservice__spring__quarkus/run_2/: metadata.json
tests/fixtures/validations/codex__business_domain__helloservice__spring__quarkus/run_3/: metadata.json
tests/fixtures/validations/codex__business_domain__standalone__spring__quarkus/run_1/: metadata.json
tests/fixtures/validations/codex__business_domain__standalone__spring__quarkus/run_2/: metadata.json
tests/fixtures/validations/codex__business_domain__standalone__spring__quarkus/run_3/: metadata.json
tests/helpers/: mod.rs
tmp/: audit_validation_logs.py  classify_run_logs.py
wix/: main.wxs
(+355 files in other folders)
