[package]
name    = "scarf"
version = "0.1.0"
edition = "2024"
include = [
  "Cargo.toml",
  "src/**",
  "README.md",
  "LICENSE*",
]
authors = ["Rahul Krishna <i.m.ralk@gmail.com>"]

[dependencies]
bon                 = "3.9.0"
env_logger          = "0.11"
syntect             = "5.3.0"
walkdir             = "2.5.0"
comfy-table         = "7.2.2"
owo-colors          = "4.2.3"
strip-ansi-escapes  = "0.2.1"
tempfile            = "3.24.0"
log                 = "0.4.29"
rayon               = "1.11.0"
regex               = "1.12.2"
serde_json          = "1.0.149"
anyhow              = "1.0.100"
clap                = { version = "4.5.55",  features = [ "derive" ] }
serde               = { version = "1.0.228", features = [ "derive" ] }
reqwest             = { version = "0.13.2",  features = [ "blocking", "json" ] }
flate2 = "1.1.9"
tar = "0.4.44"
kdam = { version = "0.6.4", features = ["derive", "rich", "spinner"] }

[dev-dependencies]
tempfile   = "3.24.0"
assert_cmd = "2.1.2"
