[package]
name            = "scarfbench-cli"
version         = "0.1.0"
edition         = "2024"
authors         = ["Rahul Krishna <i.m.ralk@gmail.com>"]
license         = "Apache-2.0"
description     = "CLI for running, testing, and evaluating SCARF benchmark applications."
homepage        = "https://github.com/scarfbench/scarf"
repository      = "https://github.com/scarfbench/scarf"
documentation   = "https://docs.rs/scarf"
readme          = "README.md"
keywords        = ["benchmark", "cli", "evaluation", "testing", "automation"]
categories      = ["command-line-utilities", "development-tools::testing"]
include = [
  "Cargo.toml",
  "src/**",
  "tests/**",
  "README.md",
  "LICENSE*",
]

[package.metadata.wix]
upgrade-guid = "A803AB62-0AD5-4E0B-90A3-300CCB70C6C8"
path-guid = "ED1637ED-B22A-4955-AC24-AD2419D784B9"
license = false
eula = false

[package.metadata.dist]
formula = "scarf"

[[bin]]
name = "scarf"
path = "src/main.rs"

[dependencies]
bon                 = "3.9.0"
env_logger          = "0.11"
syntect             = "5.3.0"
walkdir             = "2.5.0"
comfy-table         = "7.2.2"
owo-colors          = "4.2.3"
strip-ansi-escapes  = "0.2.1"
tempfile            = "3.24.0"
log                 = "0.4.29"
rayon               = "1.11.0"
regex               = "1.12.2"
serde_json          = "1.0.149"
anyhow              = "1.0.100"
clap                = { version = "4.5.55",  features = [ "derive" ] }
serde               = { version = "1.0.228", features = [ "derive" ] }
reqwest             = { version = "0.13.2",  features = [ "blocking", "json" ] }
flate2 = "1.1.9"
tar = "0.4.44"
kdam = { version = "0.6.4", features = ["derive", "rich", "spinner"] }

[dev-dependencies]
tempfile   = "3.24.0"
assert_cmd = "2.1.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
