[build-system]
requires = ["maturin>=1.6"]
build-backend = "maturin"

[project]
name = "scarf"
version = "0.1.0-rc.1"
description = "ScarfBench CLI"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Rahul Krishna", email = "i.m.ralk@gmail.com"}]

[tool.maturin]
bindings = "bin"
version-source = "cargo"
bin = ["scarf"]
